Fix content spacing

--- a/common/styles/utilities/_root-scope-classes.scss
+++ b/common/styles/utilities/_root-scope-classes.scss
@@ -519,10 +519,10 @@
 .hero-picture-bg {
   height: 50%;
   width: 100%;
-  bottom: $spacing-unit * -9;
+  bottom: $spacing-unit * -8;
 
   @include respond-to('medium') {
-    bottom: $spacing-unit * -13;
+    bottom: $spacing-unit * -10;
   }
 }
 
